[package]
name = "kvs"
version = "0.1.0"
authors = ["Brian Anderson <fakeluziyan@gmail.com>"]
description = "A key-value store"
edition = "2021"

[dependencies]
clap = "3.1.18"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
failure = "0.1.8"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.0"
tempfile = "3.0.7"
walkdir = "2.2.7"